hphp/test/slow/inout/bad-decl-2.php.expectf

Fatal error: syntax error, unexpected ..., expecting T_VARIABLE in %s/bad-decl-2.php on line 3
